commit con registrazione funzionante + salvataggio nel db dell'utente

--- a/Frontend/WorldInPocket/src/app/components/auth/login/login.component.html
+++ b/Frontend/WorldInPocket/src/app/components/auth/login/login.component.html
@@ -84,7 +84,7 @@
                     <label for="password">Password</label>
                     <input pInputText id="password" type="password" />
                 </div>
-                <p-button label="Login"></p-button>
+                <p-button label="Login" [routerLink]="['/dashboard']"></p-button>
             </div>
         </div>
         <div class="col-2">
