aggiunta delle prime card

--- a/Frontend/WorldInPocket/src/app/components/navbar/navbar.component.html
+++ b/Frontend/WorldInPocket/src/app/components/navbar/navbar.component.html
@@ -1,11 +1,11 @@
-<div class="card">
+<div class="card flex justify-content-center">
   <p-menubar [model]="items">
     <ng-template pTemplate="start">
       <img src="https://primefaces.org/cdn/primeng/images/primeng.svg" height="60" class="mr-2" />
     </ng-template>
     <ng-template pTemplate="end">
-      <p-button class="custom-button" label="Login" label="Secondary" styleClass="p-button-secondary" (click)="openLoginModal()"></p-button>
-      <p-button class="custom-button" label="Register" label="Secondary" styleClass="p-button-secondary" (click)="openRegisterModal()"></p-button>
+      <p-button class="custom-button" label="Login" label="Accedi" styleClass="p-button-secondary" (click)="openLoginModal()"></p-button>
+      <p-button class="custom-button" label="Register" label="Registrati" styleClass="p-button-secondary" (click)="openRegisterModal()"></p-button>
     </ng-template>
   </p-menubar>
 </div>
