--- a/Frontend/WorldInPocket/src/app/components/home/home.component.html
+++ b/Frontend/WorldInPocket/src/app/components/home/home.component.html
@@ -1,29 +1,25 @@
-<!-- <div class="card md:flex md:justify-content-center">
-  <div class="flex flex-wrap gap-3 mb-5">
-      <p-radioButton *ngFor="let option of positionOptions;" [name]="option.label" [value]="option.value" [label]="option.label" [(ngModel)]="position" [inputId]="label"></p-radioButton>
-  </div>
-  <p-galleria [(value)]="images" [thumbnailsPosition]="position" [responsiveOptions]="responsiveOptions" [containerStyle]="{ 'max-width': '640px' }" [numVisible]="5">
-      <ng-template pTemplate="item" let-item>
-          <img [src]="item.itemImageSrc" style="width: 100%; min-height: 420px; display: block;" />
-      </ng-template>
-      <ng-template pTemplate="thumbnail" let-item>
-          <div class="grid grid-nogutter justify-content-center">
-              <img [src]="item.thumbnailImageSrc" />
-          </div>
-      </ng-template>
-  </p-galleria>
-</div> -->
-
-<div class="card md:flex md:justify-content-center">
-  <p-galleria [value]="images" [responsiveOptions]="responsiveOptions" [containerStyle]="{ 'max-width': '640px' }" [numVisible]="5">
-      <ng-template pTemplate="item" let-item>
-          <img [src]="item.itemImageSrc" style="width: 100%;" />
-      </ng-template>
-      <ng-template pTemplate="thumbnail" let-item>
-          <div class="grid grid-nogutter justify-content-center">
-              <img [src]="item.thumbnailImageSrc" />
-          </div>
-      </ng-template>
-  </p-galleria>
+<div class="wrapper">
+	<h1 data-heading="Hotel" contenteditable>Hotel</h1>
 </div>
+
+<div class="card-container">
+  <div class="card flex justify-content-center" *ngFor="let hotel of hotels" #hotelCard>
+    <p-card [header]="hotel.name" [style]="{ width: '360px' }">
+      <ng-template pTemplate="header">
+        <img alt="Card" [src]="hotel.thumbNailUrl" class="card-image" />
+      </ng-template>
+      <p>
+        {{ hotel.shortDescription }}
+      </p>
+      <ng-template pTemplate="footer">
+        <p-button label="Save" icon="pi pi-check"></p-button>
+        <p-button label="Cancel" icon="pi pi-times" styleClass="p-button-secondary" [style]="{ 'margin-left': '.5em' }"></p-button>
+      </ng-template>
+    </p-card>
+  </div>
+</div>
+
+
+
+
 
