--- a/Frontend/WorldInPocket/src/app/components/login-modal/login-modal.component.html
+++ b/Frontend/WorldInPocket/src/app/components/login-modal/login-modal.component.html
@@ -3,15 +3,12 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="loginModalLabel">Accesso</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
       </div>
       <div class="modal-body">
         <form (ngSubmit)="login()">
           <div class="form-group">
-            <label for="email">Email</label>
-            <input type="email" class="form-control" id="email" [(ngModel)]="loginData.email" name="email" required>
+            <label for="email">Username</label>
+            <input type="text" class="form-control" id="email" [(ngModel)]="loginData.username" name="username" required>
           </div>
           <div class="form-group">
             <label for="password">Password</label>
