--- a/Frontend/WorldInPocket/src/app/components/register-modal/register-modal.component.html
+++ b/Frontend/WorldInPocket/src/app/components/register-modal/register-modal.component.html
@@ -1,41 +1,41 @@
 <div class="bg-gray-100 max-w-30rem border-round-md p-4 shadow-8">
-  <h3 class="text-center text-4xl my-3">Sign up</h3>
+  <h3 class="text-center text-4xl my-3">Iscriviti!</h3>
   <form [formGroup]="fG" (ngSubmit)="submit()">
     <div class="grid">
-      <div class="col-12 my-2">
-        <span class="p-float-label">
-          <input class="w-full" pInputText id="nome" formControlName="name" />
-          <label htmlFor="nome">Nome</label>
+      <div class="col-12 my-2 input-container">
+        <span class="p-float-label label-floating">
+          <input class="w-full p-inputtext p-component" id="nome" formControlName="name" />
+          <label class="p-d-block" htmlFor="nome">Nome</label>
         </span>
       </div>
-      <div class="col-12 my-2">
-        <span class="p-float-label">
-          <input class="w-full" pInputText id="cognome" formControlName="cognome" />
-          <label htmlFor="cognome">Cognome</label>
+      <div class="col-12 my-2 input-container">
+        <span class="p-float-label label-floating">
+          <input class="w-full p-inputtext p-component" id="cognome" formControlName="cognome" />
+          <label class="p-d-block" htmlFor="cognome">Cognome</label>
         </span>
       </div>
-      <div class="col-12 my-2">
-        <span class="p-float-label">
-          <input class="w-full" pInputText id="username" formControlName="username" />
-          <label htmlFor="username">Username</label>
+      <div class="col-12 my-2 input-container">
+        <span class="p-float-label label-floating">
+          <input class="w-full p-inputtext p-component" id="username" formControlName="username" />
+          <label class="p-d-block" htmlFor="username">Username</label>
         </span>
       </div>
-      <div class="col-12 my-2">
-        <span class="p-float-label">
-          <input class="w-full" pInputText id="email" formControlName="email" />
-          <label htmlFor="email">Email</label>
+      <div class="col-12 my-2 input-container">
+        <span class="p-float-label label-floating">
+          <input class="w-full p-inputtext p-component" id="email" formControlName="email" />
+          <label class="p-d-block" htmlFor="email">Email</label>
         </span>
       </div>
-      <div class="col-12 my-2">
-        <div class="card flex justify-content-center">
+      <div class="col-12 my-2 input-container">
+        <div class="card p-shadow-4 flex justify-content-center">
           <p-password class="w-full" formControlName="password" [toggleMask]="true"></p-password>
         </div>
       </div>
     </div>
-    <div class="my-2">
-      <p-button type="submit" [disabled]="!fG.valid" label="Registrati"></p-button>
+    <div class="my-2 input-container">
+      <p-button class="custom-button" type="submit" [disabled]="!fG.valid" label="Registrati" class="p-button-primary"></p-button>
     </div>
   </form>
-  <p>Hai già un account? Effettua il <a [routerLink]="['/login']">log in</a>.</p>
+  <p class="text-center">Hai già un account? Effettua il <a [routerLink]="['/login']" class="text-primary">log in</a>.</p>
 </div>
 
