--- a/Frontend/WorldInPocket/src/app/components/home/home.component.html
+++ b/Frontend/WorldInPocket/src/app/components/home/home.component.html
@@ -1,6 +1,13 @@
-<div class="wrapper">
-	<h1 data-heading="Hotel" contenteditable>Hotel</h1>
-</div>
+
+<!--
+
+
+
+
+
+
+
+<h1 data-heading="Hotel">Hotel</h1>
 
 <div class="card-container">
   <div class="card flex justify-content-center" *ngFor="let hotel of hotels" #hotelCard>
@@ -18,8 +25,24 @@
     </p-card>
   </div>
 </div>
-
-
-
-
-
+-->
+<div class="card-container">
+  <div class="card flex justify-content-center" *ngFor="let hotel of hotels" #hotelCard>
+    <p-card [header]="hotel.name" [style]="{ width: '360px' }">
+      <ng-template pTemplate="header">
+        <p-carousel [value]="hotel.images" [numVisible]="1" [numScroll]="1" [circular]="true" [responsiveOptions]="responsiveOptions">
+          <ng-template let-image pTemplate="item">
+            <img [style]="{ 'margin-top': '.6em' }" alt="Card" [src]="image" class="card-image" />
+          </ng-template>
+        </p-carousel>
+      </ng-template>
+      <p>
+        {{ hotel.shortDescription }}
+      </p>
+      <ng-template pTemplate="footer">
+        <p-button label="Save" icon="pi pi-check"></p-button>
+        <p-button label="Cancel" icon="pi pi-times" styleClass="p-button-secondary" [style]="{ 'margin-left': '.5em' }"></p-button>
+      </ng-template>
+    </p-card>
+  </div>
+</div>
