--- a/Frontend/WorldInPocket/src/app/components/home/home.component.scss
+++ b/Frontend/WorldInPocket/src/app/components/home/home.component.scss
@@ -1,8 +1,10 @@
 .card-container {
   display: flex;
+  width: auto;
   flex-wrap: wrap;
   justify-content: space-between;
-
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .card {
