--- a/Frontend/WorldInPocket/src/app/components/login-modal/login-modal.component.html
+++ b/Frontend/WorldInPocket/src/app/components/login-modal/login-modal.component.html
@@ -12,7 +12,7 @@
           </div>
           <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" class="form-control" id="password" [(ngModel)]="loginData.password" name="password" required>
+            <input type="password" class="" id="password" [(ngModel)]="loginData.password" name="password" required>
           </div>
           <button type="submit" class="btn btn-primary">Accedi</button>
         </form>
