--- a/Frontend/WorldInPocket/src/app/components/login-modal/login-modal.component.html
+++ b/Frontend/WorldInPocket/src/app/components/login-modal/login-modal.component.html
@@ -1,22 +1,10 @@
-<div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="loginModalLabel">Accesso</h5>
-      </div>
-      <div class="modal-body">
-        <form (ngSubmit)="login()">
-          <div class="form-group">
-            <label for="email">Username</label>
-            <input type="text" class="form-control" id="email" [(ngModel)]="loginData.username" name="username" required>
-          </div>
-          <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" class="" id="password" [(ngModel)]="loginData.password" name="password" required>
-          </div>
-          <button type="submit" class="btn btn-primary">Accedi</button>
-        </form>
-      </div>
-    </div>
-  </div>
-</div>
+
+<form #fG="ngForm" (ngSubmit)="loginUser(fG)">
+  <label for="username">Username</label>
+  <input ngModel name="username" pInputText id="username" type="text" />
+
+  <label for="password">Password</label>
+  <input ngModel name="password" pInputText id="password" type="password" />
+
+  <p-button type="submit" label="Login"></p-button>
+</form>
