--- a/Frontend/WorldInPocket/src/app/components/navbar/navbar.component.html
+++ b/Frontend/WorldInPocket/src/app/components/navbar/navbar.component.html
@@ -42,7 +42,7 @@ display: flex;
 justify-content: space-between;
 ">
   <div class="navbar-logo">
-      <a href="#">Logo</a>
+      <img src="/images/logo.png">
   </div>
   <div class="navbar-search">
       <div class="bar">
