--- a/Frontend/WorldInPocket/src/app/app.component.html
+++ b/Frontend/WorldInPocket/src/app/app.component.html
@@ -1,3 +1,10 @@
 <app-navbar></app-navbar>
-<router-outlet></router-outlet>
-
+<ng-container *ngIf="isHomePage">
+  <app-home-header></app-home-header>
+  <app-home-section></app-home-section>
+  <app-home-section-packages></app-home-section-packages>
+  <app-home-section-testimonials></app-home-section-testimonials>
+  <app-home-contact></app-home-contact>
+  <app-home-footer></app-home-footer>
+</ng-container>
+<router-outlet *ngIf="!isHomePage"></router-outlet>
