Update e miglioramenti della grafica

--- a/Frontend/WorldInPocket/src/app/components/dashboard/dashboard.component.html
+++ b/Frontend/WorldInPocket/src/app/components/dashboard/dashboard.component.html
@@ -1,4 +1,5 @@
-<svg
+<div class="iconeNavbar">
+  <svg
   id="demo"
   xmlns="http://www.w3.org/2000/svg"
   width="600"
@@ -78,6 +79,8 @@
   </g>
   <path id="main" d="" fill="none" stroke-miterlimit="10" />
 </svg>
+</div>
+
 
 <div class="card-container">
   <div
