--- a/Frontend/WorldInPocket/src/app/components/navbar/navbar.component.html
+++ b/Frontend/WorldInPocket/src/app/components/navbar/navbar.component.html
@@ -43,20 +43,20 @@ justify-content: space-between;
     <div class="bar">
       <div class="location">
         <p>Location</p>
-        <input type="text" placeholder="Where are you going?">
+        <input type="text" placeholder="Dove vuoi andare?">
       </div>
       <div class="check-in">
         <p>Check in</p>
-        <input type="text" placeholder="Add dates">
+        <input type="text" placeholder="data partenza">
       </div>
       <div class="check-out">
         <p>Check out</p>
-        <input type="text" placeholder="Add dates">
+        <input type="text" placeholder="data arrivo">
       </div>
       <div class="guests">
         <p>Guests</p>
-        <input type="text" placeholder="Add guests" class="w-full">
-        <span><i class="lni lni-search-alt"></i></span>
+        <input type="text" placeholder="viaggiatori" class="w-full">
+        <span><button style="border: none; background:none"><i class="fa fa-search"></i></button></span>
       </div>
     </div>
   </div>
