--- a/Frontend/WorldInPocket/src/app/components/auth/login/login.component.html
+++ b/Frontend/WorldInPocket/src/app/components/auth/login/login.component.html
@@ -70,7 +70,7 @@
       </div>
     </div>
   </div>
-</div> -->
+</div>
 <form #fG="ngForm" (ngSubmit)="login(fG)">
   <label for="username">Username</label>
   <input ngModel name="username" pInputText id="username" type="text" />
@@ -79,4 +79,13 @@
   <input ngModel name="password" pInputText id="password" type="password" />
 
   <p-button type="submit" label="Login"></p-button>
-</form>
+</form>-->
+
+<div class="login">
+  <h1>Login</h1>
+  <form #fG="ngForm" (ngSubmit)="login(fG)">
+    <input ngModel name="username" placeholder="Username" required />
+    <input ngModel name="password" placeholder="Password" type="password" required />
+    <button type="submit" class="btn btn-primary btn-block btn-large">Accedi</button>
+  </form>
+</div>
