Update + debug e inserimento metodo di pagamento ma ancora da testare

--- a/Frontend/WorldInPocket/src/app/components/hotel-details/hotel-details.component.html
+++ b/Frontend/WorldInPocket/src/app/components/hotel-details/hotel-details.component.html
@@ -9,6 +9,7 @@
       <p>{{ selectedHotel.shortDescription }}</p>
       <p>Indirizzo: {{ selectedHotel.address1 }}</p>
       <p>Stelle: {{ selectedHotel.highRate }}</p>
+      <p>Prezzo: {{selectedHotel.price}}</p>
     </div>
     <div class="image-gallery">
       <h3>Galleria</h3>
