--- a/Frontend/WorldInPocket/src/app/components/prenotazione-hotel/prenotazione-hotel.component.html
+++ b/Frontend/WorldInPocket/src/app/components/prenotazione-hotel/prenotazione-hotel.component.html
@@ -1,29 +1,29 @@
-<form (ngSubmit)="effettuaPrenotazione()" action="">
+<form (ngSubmit)="effettuaPrenotazione()" [formGroup]="prenotazioneForm">
   <!--  General -->
   <div class="form-group">
     <h2 class="heading">Booking & contact</h2>
     <div class="controls">
-      <input type="text" id="name" class="floatLabel" name="name">
+      <input type="text" id="name" class="floatLabel" name="name" formControlName="name">
       <label for="name">Name</label>
     </div>
     <div class="controls">
-      <input type="text" id="email" class="floatLabel" name="email">
+      <input type="text" id="email" class="floatLabel" name="email" formControlName="email">
       <label for="email">Email</label>
     </div>
     <div class="controls">
-      <input type="tel" id="phone" class="floatLabel" name="phone">
+      <input type="tel" id="phone" class="floatLabel" name="phone" formControlName="phone">
       <label for="phone">Phone</label>
     </div>
       <div class="grid">
         <div class="col-2-3">
           <div class="controls">
-           <input type="text" id="street" class="floatLabel" name="street">
+           <input type="text" id="street" class="floatLabel" name="street" formControlName="street">
            <label for="street">Street</label>
           </div>
         </div>
         <div class="col-1-3">
           <div class="controls">
-            <input type="number" id="street-number" class="floatLabel" name="street-number">
+            <input type="number" id="streetNumber" class="floatLabel" name="streetNumber" formControlName="streetNumber">
             <label for="street-number">Number</label>
           </div>
         </div>
@@ -31,19 +31,19 @@
       <div class="grid">
         <div class="col-2-3">
           <div class="controls">
-            <input type="text" id="city" class="floatLabel" name="city">
+            <input type="text" id="city" class="floatLabel" name="city" formControlName="city">
             <label for="city">City</label>
           </div>
         </div>
         <div class="col-1-3">
           <div class="controls">
-            <input type="text" id="post-code" class="floatLabel" name="post-code">
+            <input type="text" id="postCode" class="floatLabel" name="postCode" formControlName="postCode">
             <label for="post-code">Post Code</label>
           </div>
         </div>
       </div>
       <div class="controls">
-        <input type="text" id="country" class="floatLabel" name="country">
+        <input type="text" id="country" class="floatLabel" name="country" formControlName="country">
         <label for="country">Country</label>
       </div>
   </div>
@@ -53,13 +53,13 @@
     <div class="grid">
     <div class="col-1-4 col-1-4-sm">
       <div class="controls">
-        <input type="date" id="arrive" class="floatLabel" name="arrive" value="<?php echo date('Y-m-d'); ?>">
+        <input type="date" id="arrive" class="floatLabel" name="arrive" formControlName="arrive" value="<?php echo date('Y-m-d'); ?>">
         <label for="arrive" class="label-date"><i class="fa fa-calendar"></i>&nbsp;&nbsp;Arrive</label>
       </div>
     </div>
     <div class="col-1-4 col-1-4-sm">
       <div class="controls">
-        <input type="date" id="depart" class="floatLabel" name="depart" value="<?php echo date('Y-m-d'); ?>" />
+        <input type="date" id="depart" class="floatLabel" name="depart" formControlName="depart" value="<?php echo date('Y-m-d'); ?>" />
         <label for="depart" class="label-date"><i class="fa fa-calendar"></i>&nbsp;&nbsp;Depart</label>
       </div>
     </div>
@@ -68,7 +68,7 @@
     <div class="col-1-3 col-1-3-sm">
       <div class="controls">
         <i class="fa fa-sort"></i>
-        <select class="floatLabel">
+        <select class="floatLabel"  formControlName="people" name="people">
           <option value="blank"></option>
           <option value="1">1</option>
           <option value="2" selected>2</option>
@@ -103,13 +103,13 @@
 
      </div>
       <div class="grid">
-        <p class="info-text">Please describe your needs e.g. Extra beds, children's cots</p>
+        <p class="info-text">Se hai qualcosa da chiedere non esitare a scrivere..</p>
         <br>
         <div class="controls">
-          <textarea name="comments" class="floatLabel" id="comments"></textarea>
+          <textarea name="comments" class="floatLabel" id="comments" formControlName="comments"></textarea>
           <label for="comments">Comments</label>
           </div>
-            <button type="submit" value="Submit" class="col-1-4">Invia e procedi con il pagamento</button>
+            <button (click)="navigateToPaymentPage()" [disabled]="!isFormValid()" class="col-1-4">Invia e procedi con il pagamento</button>
       </div>
   </div>
 </form>
