responsive home + navbar

--- a/Frontend/WorldInPocket/src/app/components/auth/login/login.component.html
+++ b/Frontend/WorldInPocket/src/app/components/auth/login/login.component.html
@@ -80,6 +80,49 @@
 
   <p-button type="submit" label="Login"></p-button>
 </form>-->
+<body>
+
+
+<div class="glowing">
+
+  <span style="--i:1;"></span>
+
+  <span style="--i:2;"></span>
+
+  <span style="--i:3;"></span>
+
+</div>
+
+<div class="glowing">
+
+  <span style="--i:1;"></span>
+
+  <span style="--i:2;"></span>
+
+  <span style="--i:3;"></span>
+
+</div>
+
+<div class="glowing">
+
+  <span style="--i:1;"></span>
+
+  <span style="--i:2;"></span>
+
+  <span style="--i:3;"></span>
+
+</div>
+
+<div class="glowing">
+
+  <span style="--i:1;"></span>
+
+  <span style="--i:2;"></span>
+
+  <span style="--i:3;"></span>
+
+</div>
+
 
 <div class="login">
   <h1>Login</h1>
@@ -89,3 +132,4 @@
     <button type="submit" class="btn btn-primary btn-block btn-large">Accedi</button>
   </form>
 </div>
+</body>
