--- a/Frontend/WorldInPocket/src/app/components/home-footer/home-footer.component.scss
+++ b/Frontend/WorldInPocket/src/app/components/home-footer/home-footer.component.scss
@@ -10,6 +10,7 @@ nav {
 }
 
 a {
+  font-family: "Roboto", sans-serif;
   text-decoration: none;
   opacity: 0.75;
   color: #fff;
@@ -26,6 +27,7 @@ a:hover {
 }
 
 footer {
+  font-family: "Roboto", sans-serif;
   display: flex;
   align-items: center;
   justify-content: space-around;
