--- a/Frontend/WorldInPocket/src/styles.scss
+++ b/Frontend/WorldInPocket/src/styles.scss
@@ -2,3 +2,4 @@
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
 @import "primeicons/primeicons.css";
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans&family=Roboto:wght@300&display=swap');
