--- a/Frontend/WorldInPocket/src/app/components/home-header/home-header.component.scss
+++ b/Frontend/WorldInPocket/src/app/components/home-header/home-header.component.scss
@@ -41,6 +41,7 @@
 }
 
 .text {
+  font-family: "Roboto", sans-serif;
   opacity: 0;
   text-align: center;
   position: absolute;
@@ -52,7 +53,6 @@
   height: 20%;
   width: 100%;
   color: white;
-  font-family: "Montserrat", sans-serif;
   font-size: 5rem;
   font-weight: bold;
   margin: auto;
