--- a/Frontend/WorldInPocket/src/app/components/home-section/home-section.component.scss
+++ b/Frontend/WorldInPocket/src/app/components/home-section/home-section.component.scss
@@ -1,11 +1,12 @@
 * {
+  font-family: "Roboto", sans-serif;
 	margin:0;
 	padding:0;
 	box-sizing:border-box;
 }
 
 html {
-	font: normal 16px Raleway;
+	font-family: "Roboto", sans-serif;
 	color:#555;
 }
 
@@ -59,8 +60,7 @@ hr {
 
 section h3.title {
 	text-transform:capitalize;
-	font: bold 32px Raleway;
-	margin-bottom:30px;
+	margin-bottom:20px;
 	text-align:center;
 }
 
