implementazione paypal ma da debuggare

--- a/Frontend/WorldInPocket/src/app/components/dashboard/dashboard.component.html
+++ b/Frontend/WorldInPocket/src/app/components/dashboard/dashboard.component.html
@@ -1,12 +1,12 @@
 <div class="iconeNavbar">
-  <button type="button" class="btn-hotel">
+  <button type="button" class="btn-hotel" [routerLink]="['/dashboard']">
     <i class="fa fa-solid fa-hotel fa-lg" style="color: #000000;"></i>
   </button>
   <button type="button" class="btn-volo">
-  <i class="fa fa-solid fa-plane fa-lg" style="color: #000000;"></i>
+  <i class="fa fa-solid fa-plane fa-lg" style="color: #000000;" [routerLink]="['/volo']"></i>
   </button>
 
-  <button type="button" class="btn-noleggio">
+  <button type="button" class="btn-noleggio" [routerLink]="['/noleggio']">
     <i class="fa fa-solid fa-car fa-lg" style="color: #000000; "></i>
   </button>
 
