--- a/Frontend/WorldInPocket/src/app/components/dashboard/dashboard.component.scss
+++ b/Frontend/WorldInPocket/src/app/components/dashboard/dashboard.component.scss
@@ -8,7 +8,9 @@
 }
 
 .iconeNavbar {
-  margin-top: 26px;
+  height: 80px;
+  background-color: #343a400f;
+  margin-top: 0px;
   margin-bottom: 26px;
   display: flex;
   justify-content: center;
