--- a/Frontend/WorldInPocket/src/app/components/prenotazione-hotel/prenotazione-hotel.component.html
+++ b/Frontend/WorldInPocket/src/app/components/prenotazione-hotel/prenotazione-hotel.component.html
@@ -1,5 +1,5 @@
 <form (ngSubmit)="effettuaPrenotazione()" [formGroup]="prenotazioneForm">
-  <!--  General -->
+  <!--  Generale -->
   <div class="form-group">
     <h2 class="heading">Booking & contact</h2>
     <div class="controls">
@@ -68,13 +68,8 @@
     <div class="col-1-3 col-1-3-sm">
       <div class="controls">
         <i class="fa fa-sort"></i>
-        <select class="floatLabel"  formControlName="people" name="people">
-          <option value="blank"></option>
-          <option value="1">1</option>
-          <option value="2" selected>2</option>
-          <option value="3">3</option>
-        </select>
-        <label for="fruit"><i class="fa fa-male"></i>&nbsp;&nbsp;People</label>
+        <input type="number" id="people" class="floatLabel" name="people" formControlName="people">
+      <label for="people"><i class="fa fa-male"></i>&nbsp;&nbsp;People</label>
       </div>
     </div>
     <div class="col-1-3 col-1-3-sm">
@@ -109,7 +104,7 @@
           <textarea name="comments" class="floatLabel" id="comments" formControlName="comments"></textarea>
           <label for="comments">Comments</label>
           </div>
-            <button (click)="navigateToPaymentPage()" [disabled]="!prenotazioneForm.valid" class="col-1-4">Invia e procedi con il pagamento</button>
+            <button type="submit" (click)="navigateToPaymentPage()" [disabled]="!isFormValid()" class="col-1-4">Invia e procedi con il pagamento</button>
       </div>
   </div>
 </form>
