--- a/Frontend/WorldInPocket/src/app/components/navbar/navbar.component.html
+++ b/Frontend/WorldInPocket/src/app/components/navbar/navbar.component.html
@@ -42,27 +42,27 @@ justify-content: space-between;
     />
   </div>
   <input type="checkbox" id="navbar-toggle" class="navbar-toggle" [(ngModel)]="isMenuOpen" />
-  <label for="navbar-toggle" class="navbar-icon" (click)="isMenuOpen = !isMenuOpen">&#9776;</label>
+  <label for="navbar-toggle" class="navbar-icon" (click)="toggleMenu()">&#9776;</label>
 
   <div class="navbar-search">
     <div class="bar centered-bar">
       <div class="location">
         <p>Location</p>
-        <input type="text" placeholder="Dove vuoi andare?" />
+        <input type="text" placeholder="Dove vuoi andare?" [(ngModel)]="destinazione"/>
       </div>
-      <div class="check-in">
+      <div class="check-in" >
         <p>Check in</p>
-        <input type="text" placeholder="data partenza" />
+        <input type="text" placeholder="data partenza" [(ngModel)]="dataCheckIn"/>
       </div>
       <div class="check-out">
         <p>Check out</p>
-        <input type="text" placeholder="data arrivo" />
+        <input type="text" placeholder="data arrivo" [(ngModel)]="dataCheckOut"/>
       </div>
       <div class="guests">
         <p>Guests</p>
-        <input type="text" placeholder="viaggiatori" class="w-full" />
+        <input type="text" placeholder="viaggiatori" class="w-full" [(ngModel)]="numeroPasseggeri"/>
         <span
-          ><button style="border: none; background: none">
+          ><button (click)="cercaVoli()"style="border: none; background: none">
             <i class="fa fa-search"></i></button
         ></span>
       </div>
@@ -89,7 +89,6 @@ justify-content: space-between;
 
           <p-toast></p-toast>
           <p-menu #menu [model]="items" [popup]="true"></p-menu>
-          <p-menu #menu [model]="items" [popup]="true"></p-menu>
 <button pButton type="button" (click)="menu.toggle($event)" icon="pi pi-bars" [label]="user!.username"></button>
         </div>
       </li>
@@ -114,3 +113,5 @@ justify-content: space-between;
     </ul>
   </div>
 </nav>
+
+
