--- a/Frontend/WorldInPocket/src/app/components/volo/volo.component.html
+++ b/Frontend/WorldInPocket/src/app/components/volo/volo.component.html
@@ -1,125 +1,125 @@
-<!--<div id="search-form">
-  <div id="header">
-    <h1>SEARCH FOR CHEAP FLIGHTS</h1>
-  </div>
-  <section>
-    <div class="flight" id="flightbox">
+<div class="iconeNavbar">
+  <button type="button" class="btn-hotel" [routerLink]="['/dashboard']">
+    <i class="fa fa-solid fa-hotel fa-lg" style="color: #000000;"></i>
+  </button>
+  <button type="button" class="btn-volo">
+  <i class="fa fa-solid fa-plane fa-lg" style="color: #000000;" [routerLink]="['/volo']"></i>
+  </button>
 
-      <form id="flight-form">
-       TRIP TYPE
-      <div id="flight-type">
-        <div class="info-box">
-          <input type="radio" name="flight-type" value="Return" id="return" checked />
-          <label for="return">RETURN</label>
-        </div>
-        <div class="info-box">
-          <input type="radio" name="flight-type" value="Single" id="one-way" />
-          <label for="one-way">ONE WAY</label>
-        </div>
-      </div>
-
-
-      <div id="flight-depart">
-        <div class="info-box">
-          <label for="">LEAVING FROM</label>
-          <input type="text" id="dep-from" />
-          <div id="depart-res"></div>
-        </div>
-        <div class="info-box" id="arrive-box">
-          <label for="">ARRIVING AT</label>
-          <input type="text" id="dep-to" />
-          <div id="arrive-res"></div>
-        </div>
-      </div>
-
-      <div id="flight-dates">
-        <div class="info-box">
-          <label for="">LEAVING ON</label>
-          <input type="text" id="leave-date" readonly />
-        </div>
-        <div class="info-box" id="return-box">
-          <label for="">RETURNING ON</label>
-          <input type="text" id="return-date" readonly />
-        </div>
-      </div>
-
-
-      <div id="flight-info">
-        <div class="info-box">
-          <label for="adults">ADULTS</label>
-          <select name="adults" id="adults">
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-          </select>
-        </div>
-        <div class="info-box">
-          <label for="children">CHILDREN</label>
-          <select name="children" id="children">
-            <option value="0">0</option>
-            <option value="1">1</option>
-            <option value="0">2</option>
-            <option value="3">3</option>
-          </select>
-        </div>
-        <div class="info-box">
-          <label for="class-type">CLASS</label>
-          <select name="class-type" id="class-type">
-            <option value="Economy">ECONOMY</option>
-            <option value="Business">BUSINESS</option>
-            <option value="First">FIRST CLASS</option>
-          </select>
-        </div>
-    </div>
-
-
-    <div id="flight-search">
-      <div class="info-box">
-        <button>
-        <input type="submit" id="search-flight" value="SEARCH FLIGHTS"/></button>
-      </div>
-    </div>
-
-    </form>
-    </div>
-  </section>
-
-  <div id="calender">
-    <div class="nav">
-      <button id="prev"><</button>
-      <p><span id="month"></span>
-        <span id="year"></span></p>
-      <button id="next">></button>
-    </div>
-    <table id="cal"></table>
-    </div>
+  <button type="button" class="btn-noleggio" [routerLink]="['/noleggio']">
+    <i class="fa fa-solid fa-car fa-lg" style="color: #000000; "></i>
+  </button>
 
 </div>
-<div id="confirm"></div>
--->
 
-<!-- Nel tuo template HTML -->
-<form (ngSubmit)="cercaVoli()">
-  <div class="form-group">
-    <label for="destinazione">Destinazione</label>
-    <input type="text" id="destinazione" [(ngModel)]="destinazione" name="destinazione" />
+
+  <div class="container">
+      <div class="card custom-bg w-75 p-4 d-flex">
+          <div class="row">
+              <div class="pb-3 h3 text-left">Flight Search &#128747;</div>
+          </div>
+          <form id="flight-form" (submit)="cercaVoli()" >
+              <div class="row">
+                  <div class="form-group col-md align-items-start flex-column">
+                      <label for="origin" class="d-inline-flex">From</label>
+                      <input type="text" placeholder="City or Airport" class="form-control" id="origin" name="origin"
+                          required>
+                  </div>
+                  <div class="form-group col-md align-items-start flex-column">
+                      <label for="depart" class="d-inline-flex">To</label>
+                      <input type="text" placeholder="City or Airport" class="form-control" id="depart" name="depart"
+                          required>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="form-group col-md align-items-start flex-column">
+                      <label for="departure-date" class=" d-inline-flex">Depart</label>
+                      <input type="date" class="form-control" id="departure-date" name="departure-date"
+                          onkeydown="return false" required>
+                  </div>
+                  <div class="form-group col-md align-items-start flex-column">
+                      <label for="return-date" class="d-inline-flex">Return</label>
+                      <input type="date" placeholder="One way" value=""
+                          onChange="this.setAttribute('value', this.value)" class="form-control" id="return-date"
+                          name="return-date">
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="form-group col-lg-3 align-items-start flex-column">
+                      <label for="adults" class="d-inline-flex col-auto">Adults <span class="sublabel"> 12+
+                          </span></label>
+                      <select class="form-select" id="adults"
+                          onchange="javascript: dynamicDropDown(this.options[this.selectedIndex].value);">
+                          <option value="1">1</option>
+                          <option value="2">2</option>
+                          <option value="3">3</option>
+                          <option value="4">4</option>
+                          <option value="5">5</option>
+                          <option value="6">6</option>
+                          <option value="7">7</option>
+                          <option value="8">8</option>
+                          <option value="9">9</option>
+                      </select>
+                  </div>
+                  <div class="form-group col-lg-3 align-items-start flex-column">
+                      <label for="children" class="d-inline-flex col-auto">Children <span class="sublabel"> 2-11
+                          </span></label>
+                      <select class="form-select" id="children">
+                          <option value="0">0</option>
+                          <option value="1">1</option>
+                          <option value="2">2</option>
+                          <option value="3">3</option>
+                          <option value="4">4</option>
+                          <option value="5">5</option>
+                          <option value="6">6</option>
+                          <option value="7">7</option>
+                          <option value="8">8</option>
+                      </select>
+                  </div>
+                  <div class="form-group col-lg-3 align-items-start flex-column">
+                      <label for="infants" class="d-inline-flex col-auto">Infants <span class="sublabel"> less than
+                              2</span></label>
+                      <select class="form-select" id="infants">
+                          <option value="0">0</option>
+                          <option value="1">1</option>
+                      </select>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="form-group col-lg-6 align-items-start flex-column">
+                      <label for="cabin" class="d-inline-flex">Cabin</label>
+                      <select class="form-select" id="cabin">
+                          <option value="ECONOMY">Economy</option>
+                          <option value="PREMIUM_ECONOMY">Premium Economy</option>
+                          <option value="BUSINESS">Business</option>
+                          <option value="FIRST">First</option>
+                      </select>
+                  </div>
+                  <div class="form-group col-lg-6 align-items-start flex-column pt-lg-4">
+                      <div class="form-check form-switch">
+                          <input class="form-check-input align-self-center" type="checkbox" id="directFlights">
+                          <label class="form-check-label d-inline-flex align-self-center" for="directFlights">Direct
+                              flights</label>
+                      </div>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="text-left col-auto">
+                      <button type="submit" class="btn btn-primary">Search flights</button>
+                  </div>
+              </div>
+          </form>
+      </div>
   </div>
-  <div class="form-group">
-    <label for="dataCheckIn">Data Check In</label>
-    <input type="date" id="dataCheckIn" [(ngModel)]="dataCheckIn" name="dataCheckIn" />
-  </div>
-  <div class="form-group">
-    <label for="dataCheckOut">Data Check Out</label>
-    <input type="date" id="dataCheckOut" [(ngModel)]="dataCheckOut" name="dataCheckOut" />
-  </div>
-  <div class="form-group">
-    <label for="numeroPasseggeri">Numero Viaggiatori</label>
-    <input type="text" id="" [(ngModel)]="numeroPasseggeri" name="numeroPasseggeri" />
-  </div>
-  <div class="form-group">
-    <label for="budget">Budget</label>
-    <input type="text" id="" [(ngModel)]="prezzo" name="prezzo" />
-  </div>
-  <button  type="submit">Cerca</button>
-</form>
+
+<div *ngIf="risultatiRicerca">
+
+  <ul>
+    <li *ngFor="let volo of risultatiRicerca">
+
+      <p>Destinazione: {{ volo.destinazione }}</p>
+      <p>Data di partenza: {{ volo.dataPartenza }}</p>
+
+    </li>
+  </ul>
+</div>
