--- a/Frontend/WorldInPocket/src/app/components/volo/volo.component.scss
+++ b/Frontend/WorldInPocket/src/app/components/volo/volo.component.scss
@@ -1,189 +1,267 @@
-/* Search Form */
-* {
-  box-sizing: border-box;
-}
-body {
-  font-family: sans-serif;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;;
-}
-
-#search-form {
-  border: 1px solid #3b3939d9;;
-  width: 700px;
-  display: contents;
-}
-
-#header {
-  height: 80px;
-  background: #0f0f0f;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-#header h1 {
-  color: #FFF;
-  margin-left: 20px;
-  font-size: 1.3em
-}
-
-.flight {
-  padding: 20px;
-}
-.flight input, select {
-    color: #6B6A6A;
-}
-
-.info-box {
-  padding: 10px 0;
-  margin-top: 20px;
-  flex: 1;
-  border-right: 20px solid transparent;
-}
-.info-box:last-child {
-  border-right: none;
-}
-.info-box label {
-  display: block;
-  color: #6B6A6A;
-  font-size: .9em;
-}
-.info-box input[type=text], input[type=submit], select {
-  border: none;
-  outline: none;
-  background: #E2E0E0;
-  margin-top: 5px;
-  width: 100%;
-  padding: 5px;
-  height: 30px;
-  border-radius: 3px;
-}
-
-#flight-type {
-  display: flex;
-  justify-content: flex-start;
-  border-bottom: 1px dotted silver;
-}
-#flight-type .info-box {
-  flex: 0 1 25%;
-  display:flex;
-  align-items: center;
-}
-
-#flight-depart {
-  display: flex;
-  justify-content: space-between;
-  border-bottom: 1px dotted silver;
-}
-#flight-depart .info-box {
-  position: relative;
-}
-#depart-res, #arrive-res {
-  position: absolute;
-  background: #FFFFFF;
-}
-#depart-res p, #arrive-res p {
-  padding: 7px 2px;
-  border-bottom: 1px dotted silver;
-}
-#depart-res p:hover, #arrive-res p:hover {
-  background: #EDEDED;
-  cursor: pointer;
-}
-
-#flight-dates {
-  display: flex;
-  border-bottom: 1px dotted silver;
-}
-
-#flight-info {
-  display: flex;
-  border-bottom: 1px dotted silver;
-}
-
-#flight-search .info-box {
+.form-group {
   display: flex;
   justify-content: center;
-}
-#flight-search input[type=submit] {
-  background: #55AF3A;
-  color: white;
-  padding: 0;
-  height: 50px;
-  font-size: 1.2em;
-}
-
-/* Calender */
-#calender {
-  border: 3px solid red;
-  padding: 5px;
-  opacity: 0;
-  background: #FFFFFF;
-  position: absolute;
-  transition: opacity .3s;
-  pointer-events: none;
-}
-#calender .nav {
-  padding: 3px;
-  display: flex;
-  justify-content: space-between;
   align-items: center;
-  margin-bottom: 5px;
-}
-#calender .nav button {
-  background: #FF3240;
-  border: none;
-  outline: none;
-  color: #FFFFFF;
-  padding: 5px 8px;
-  font-weight: 600;
-  border-radius: 3px;
-}
-table {
-  border: 1px solid #DBDBDB;
-  background: #F4F4F4;
-}
-table td {
-  border: 1px solid #DBDBDB;
-  padding: 5px;
-  text-align: center;
-  cursor: pointer;
-}
-.normal {
-  color: rgba(0,0,0,.8)
-}
-.today {
-  background: #FF3240;
-  color: #FFFFFF;
-}
-.closed {
-  color: #DBDBDB;
-  cursor: default;
-}
-.picked {
-  background: green;
-}
-#month {
-  display: inline-block;
-}
-
-#confirm {
-  width: 500px;
-  padding: 20px;
-  border: 5px solid #55AF3A;
-  margin: 20px auto;
-  opacity: 0;
-}
-#confirm h3 {
-  font-size: 1.2em;
   margin-bottom: 20px;
 }
-#confirm p {
-  padding: 10px;
-}
-#confirm strong {
-  font-weight: 600;
+
+label {
+  width: 100px;
+  text-align: right;
+  margin-right: 5px;
+  margin-left: 5px;
 }
 
+.sublabel {
+  color:gray;
+  margin:4px;
+  font-size: 11px;
+}
+
+input[type="text"],
+input[type="date"] {
+  padding: 10px;
+  font-size: 14px;
+}
+
+button[type="submit"] {
+  padding: 10px 20px;
+  background-color: #0050A0;
+  border: none;
+  cursor: pointer;
+}
+
+input[type="date"] {
+  position: relative;
+}
+
+input[type="date"]:before {
+  content: attr(placeholder);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #fff;
+  color: rgba(0, 0, 0, 0.65);
+  pointer-events: none;
+  line-height: 1.5;
+  padding: 10px 0.5rem 0 0.5rem;
+}
+
+input[type="date"]:focus:before,
+input[type="date"]:not([value=""]):before
+{
+  display: none;
+}
+
+.custom-bg {
+  background-color: #F7F7F9;
+}
+
+
+.iconeNavbar {
+  height: 80px;
+  background-color: #343a400f;
+  margin-top: 0px;
+  margin-bottom: 26px;
+  display: flex;
+  justify-content: center;
+}
+
+i {
+
+}
+
+button {
+  border: none;
+  background: none;
+}
+
+.btn-hotel {
+  margin-right: 10rem;
+}
+
+.btn-volo {
+  margin-right: 10rem;
+}
+.card {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.card-image {
+  width: 100%;
+  height:100%;
+  object-fit: cover;
+}
+
+#demo {
+  width: -webkit-fill-available;
+}
+#icons path {
+
+  fill: rgb(84, 79, 90);
+}
+
+text {
+  font-weight: 700;
+  font-size: 20px;
+  text-transform: uppercase;
+  fill: rgba(0,0,0,0.5);
+}
+
+#icons g {
+ cursor: pointer;
+
+}
+
+#icons rect {
+  fill: transparent;
+}
+
+.goop {
+  fill: #1C4861;
+  fill: #5C51A6;
+  fill: #382B8C;
+}
+
+#main {
+  stroke: #00688e;
+  stroke: none;
+  stroke-width: 1px;
+}
+
+
+
+h1, h2,
+p {
+  margin: 0;
+
+}
+
+a {
+  background: #5cceee;
+  color: white;
+  padding: 10px;
+  text-decoration: none;
+  border-radius: 3px;
+  margin-top: 10px;
+}
+
+a:hover {
+  background: white;
+    color: #5cceee;
+}
+h1, h2,
+p {
+  margin: 0;
+}
+h2 {
+  font-weight: 400;
+}
+h2 span {
+  font-weight: 700;
+  color: #5cceee;
+}
+p span {
+  font-weight: 700;
+  color: #5cceee;
+}
+
+.branding {
+
+  display: flex;
+  flex-direction: column;
+ align-items: center;
+/*   position: absolute;
+  bottom: 1rem; */
+}
+
+
+
+.inner-div {
+  flex: 1;
+  background-color: #ffffff;
+  color: #484848;
+  font-weight: 600;
+}
+.inner-div:last-child {
+  border-bottom: none;
+}
+
+.icon-container {
+  display: flex;
+  overflow-x: auto;
+  overflow-y: hidden;
+  white-space: nowrap;
+  margin: 0 24px;
+  padding: 0;
+  list-style: none;
+  gap: 24px;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+.icon-container::-webkit-scrollbar {
+  display: none;
+}
+.icon-item {
+	padding-bottom: 0;
+	margin-bottom: 0;
+}
+.icon-item a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 0 0 calc((100% - 48px) / 5);
+  margin: 12px 0 10px;
+  padding: 4px 0;
+}
+.icon-item i {
+  font-size: 24px;
+  margin-bottom: 4px;
+}
+.icon-item span {
+  font-size: 12px;
+}
+.icon-item a {
+  color: #484848;
+  text-decoration: none;
+	padding-bottom: 8px;
+	margin-bottom: 0;
+}
+.icon-item.active a,
+.icon-item a:focus {
+  color: #FF5A5F;
+  border-bottom: 2px solid #FF5A5F;
+}
+.icon-item a:hover {
+  color: #767676;
+  border-bottom: 2px solid #FF5A5F;
+}
+
+.custom-button {
+  background-color: #3f4041;
+  color: #fff;
+  border: none;
+  border-radius: 34px;
+  padding: 10px 20px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+
+  i {
+    margin-right: 5px;
+  }
+
+
+  &:hover {
+    background-color: #9ea1a3;
+  }
+}
+
+
+.center-button {
+  display: flex;
+  justify-content: center; /* Centra orizzontalmente */
+  margin-top: 10px; /* Aggiungi margine superiore a tuo piacimento */
+}
