--- a/Frontend/WorldInPocket/src/app/components/volo-details/volo-details.component.html
+++ b/Frontend/WorldInPocket/src/app/components/volo-details/volo-details.component.html
@@ -1,9 +1,7 @@
 <!-- Nella pagina dei risultati della ricerca -->
-<div *ngif="volo">
-  <h2>{{ volo.compagniaAerea }}</h2>
-  <p>{{ volo.destinazione }}</p>
-  <p>{{ volo.dataPartenza }}</p>
-  <!-- Altri dettagli del volo -->
-
+<div class="flight-card">
+  {{ volo?.destinazione }} - {{ volo?.checkInDate }} to {{ volo?.checkOutDate }}
+  Viaggiatori: {{ volo?.numeroPasseggeri }}, Prezzo: {{ volo?.prezzo }}
 </div>
+
 
