--- a/Frontend/WorldInPocket/src/app/components/volo/volo.component.html
+++ b/Frontend/WorldInPocket/src/app/components/volo/volo.component.html
@@ -13,113 +13,145 @@
 </div>
 
 
-  <div class="container">
-      <div class="card custom-bg w-75 p-4 d-flex">
-          <div class="row">
-              <div class="pb-3 h3 text-left">Flight Search &#128747;</div>
-          </div>
-          <form id="flight-form" (submit)="cercaVoli()" >
-              <div class="row">
-                  <div class="form-group col-md align-items-start flex-column">
-                      <label for="origin" class="d-inline-flex">From</label>
-                      <input type="text" placeholder="City or Airport" class="form-control" id="origin" name="origin"
-                          required>
-                  </div>
-                  <div class="form-group col-md align-items-start flex-column">
-                      <label for="depart" class="d-inline-flex">To</label>
-                      <input type="text" placeholder="City or Airport" class="form-control" id="depart" name="depart"
-                          required>
-                  </div>
-              </div>
-              <div class="row">
-                  <div class="form-group col-md align-items-start flex-column">
-                      <label for="departure-date" class=" d-inline-flex">Depart</label>
-                      <input type="date" class="form-control" id="departure-date" name="departure-date"
-                          onkeydown="return false" required>
-                  </div>
-                  <div class="form-group col-md align-items-start flex-column">
-                      <label for="return-date" class="d-inline-flex">Return</label>
-                      <input type="date" placeholder="One way" value=""
-                          onChange="this.setAttribute('value', this.value)" class="form-control" id="return-date"
-                          name="return-date">
-                  </div>
-              </div>
-              <div class="row">
-                  <div class="form-group col-lg-3 align-items-start flex-column">
-                      <label for="adults" class="d-inline-flex col-auto">Adults <span class="sublabel"> 12+
-                          </span></label>
-                      <select class="form-select" id="adults"
-                          onchange="javascript: dynamicDropDown(this.options[this.selectedIndex].value);">
-                          <option value="1">1</option>
-                          <option value="2">2</option>
-                          <option value="3">3</option>
-                          <option value="4">4</option>
-                          <option value="5">5</option>
-                          <option value="6">6</option>
-                          <option value="7">7</option>
-                          <option value="8">8</option>
-                          <option value="9">9</option>
-                      </select>
-                  </div>
-                  <div class="form-group col-lg-3 align-items-start flex-column">
-                      <label for="children" class="d-inline-flex col-auto">Children <span class="sublabel"> 2-11
-                          </span></label>
-                      <select class="form-select" id="children">
-                          <option value="0">0</option>
-                          <option value="1">1</option>
-                          <option value="2">2</option>
-                          <option value="3">3</option>
-                          <option value="4">4</option>
-                          <option value="5">5</option>
-                          <option value="6">6</option>
-                          <option value="7">7</option>
-                          <option value="8">8</option>
-                      </select>
-                  </div>
-                  <div class="form-group col-lg-3 align-items-start flex-column">
-                      <label for="infants" class="d-inline-flex col-auto">Infants <span class="sublabel"> less than
-                              2</span></label>
-                      <select class="form-select" id="infants">
-                          <option value="0">0</option>
-                          <option value="1">1</option>
-                      </select>
-                  </div>
-              </div>
-              <div class="row">
-                  <div class="form-group col-lg-6 align-items-start flex-column">
-                      <label for="cabin" class="d-inline-flex">Cabin</label>
-                      <select class="form-select" id="cabin">
-                          <option value="ECONOMY">Economy</option>
-                          <option value="PREMIUM_ECONOMY">Premium Economy</option>
-                          <option value="BUSINESS">Business</option>
-                          <option value="FIRST">First</option>
-                      </select>
-                  </div>
-                  <div class="form-group col-lg-6 align-items-start flex-column pt-lg-4">
-                      <div class="form-check form-switch">
-                          <input class="form-check-input align-self-center" type="checkbox" id="directFlights">
-                          <label class="form-check-label d-inline-flex align-self-center" for="directFlights">Direct
-                              flights</label>
-                      </div>
-                  </div>
-              </div>
-              <div class="row">
-                  <div class="text-left col-auto">
-                      <button type="submit" class="btn btn-primary">Search flights</button>
-                  </div>
-              </div>
-          </form>
-      </div>
+<section id="bodyContainer">
+  <div class="filterSearchFilter">
+    <aside id="flightSearch">
+      <form [formGroup]="searchForm" (ngSubmit)="onSubmit()" name="searchFlight">
+        <div class="radio-toolbar">
+          <input type="radio" id="radioRoundTrip" name="trip" value="Round Trip" formControlName="trip">
+          <label for="radioRoundTrip">Round Trip</label>
+        </div>
+        <div class="sourceDesination">
+          <input type="text" id="fromPlace" placeholder="From"  formControlName="origin" name="origin"/>
+          <ul id="source"></ul>
+          <span class="error"></span>
+        </div>
+        <div  class="sourceDesination">
+          <input type="text" id="toPlace" placeholder="To" formControlName="destinazione" name="destinazione"/>
+          <ul id="destination"></ul>
+          <span class="error"></span>
+        </div>
+        <div id="depatureDate">
+          <input type="text"  placeholder="Travel Date" onfocus="(this.type='date')" id="travelDate"  formControlName="dataCheckIn" name="dataCheckIn"/>
+        </div>
+        <div >
+          <input type="text" placeholder="Return Date" onfocus="(this.type='date')" id="dateOfReturn" formControlName="dataCheckOut" name="dataCheckOut"/>
+        </div>
+        <div>
+          <input type="number" id="noOfTravelers" min="1" max ="400" placeholder="Number of Travelers" formControlName="numeroPasseggeri" name="numeroPasseggeri">
+        </div>
+        <div>
+          <input id="searchBtn" type="submit" value="Submit" />
+        </div>
+      </form>
+    </aside>
+    <div class="filterDetails">
+      <div id="showFilter" class="showFilter"></div>
+      <div id="showFilterRoundTrip" class="showFilter"></div>
+    </div>
   </div>
+  <div id="FlightResult" >
+    <div  class="beforeSearch"><i class="fa fa-fighter-jet" aria-hidden="true"></i>Please Make Fight Search</div>
+    <div *ngIf="flightResults.length > 0" class="flightOnward flightResultWrapper">
+      <div class="flightResultHeader">
+        <div class="headerStartingDate">
+          <h4 class="headStartLoc"> Origin </h4>
+          <p class="headStartDate"> Departure Date </p>
+        </div>
+        <div>
+          <i class="exchangeIc fa fa-long-arrow-right"></i>
+        </div>
+        <div class="headeReturnDate">
+          <h4 class="headEndLoc"> Destination </h4>
+          <p class="headEndDate"> Return Date </p>
+        </div>
+      </div>
+      <table id="table">
+        <tr>
+          <th>Origin</th>
+          <th>Destinazione</th>
+          <th>Data Check-In</th>
+          <th>Data Check-Out</th>
+          <th>Compagnia Aerea</th>
+          <th>Numero Volo</th>
+          <th>Prezzo</th>
+        </tr>
+        <tr *ngFor="let flight of flightResults">
+          <td>{{ flight.origin }}</td>
+          <td>{{ flight.destinazione }}</td>
+          <td>{{ flight.dataCheckIn }}</td>
+          <td>{{ flight.dataCheckOut }}</td>
+          <td>{{ flight.compagniaAerea }}</td>
+          <td>{{ flight.numeroVolo }}</td>
+          <td>{{ flight.prezzo }}</td>
+        </tr>
+      </table>
+    </div>
+    <div *ngIf="flightResults.length > 0" class="flightReturn flightResultWrapper">
+      <div class="flightResultHeader">
+        <div class="headerStartingDate">
+          <h4 class="returnStartLoc"></h4>
+          <p class="returnStartDate"></p>
+        </div>
+        <div>
+          <i class="exchangeIc fa fa-long-arrow-right"></i>
+        </div>
+        <div class="headeReturnDate">
+          <h4 class="returnEndLoc"></h4>
+          <p class="returnEndDate"></p>
+        </div>
+      </div>
+      <table>
+        <tr>
+          <th>Origin</th>
+          <th>Destinazione</th>
+          <th>Data Check-In</th>
+          <th>Data Check-Out</th>
+          <th>Compagnia Aerea</th>
+          <th>Numero Volo</th>
+          <th>Prezzo</th>
+        </tr>
+        <tr *ngFor="let flight of flightResults">
+          <td>{{ flight.origin }}</td>
+          <td>{{ flight.destinazione }}</td>
+          <td>{{ flight.dataCheckIn }}</td>
+          <td>{{ flight.dataCheckOut }}</td>
+          <td>{{ flight.compagniaAerea }}</td>
+          <td>{{ flight.numeroVolo }}</td>
+          <td>{{ flight.prezzo }}</td>
+        </tr>
+      </table>
+    </div>
 
-<div *ngIf="risultatiRicerca">
+  </div>
+</section>
 
-  <ul>
-    <li *ngFor="let volo of risultatiRicerca">
 
-      <p>Destinazione: {{ volo.destinazione }}</p>
-      <p>Data di partenza: {{ volo.dataPartenza }}</p>
 
-    </li>
-  </ul>
-</div>
+
+
+
+
+
+   <!-- </div>
+    <div class="flightReturn flightResultWrapper">
+      <div class="flightResultHeader">
+        <div class="headerStartingDate">
+          <h4 class="returnStartLoc">  </h4>
+          <p class="returnStartDate"></p>
+        </div>
+        <div>
+          <i class="exchangeIc fa fa-long-arrow-right"></i>
+        </div>
+        <div class="headeReturnDate">
+          <h4 class="returnEndLoc"></h4>
+          <p class="returnEndDate"></p>
+        </div>
+      </div>
+      <table id="table1"></table>
+    </div>
+  </div>
+</section>-->
+
+
+
