--- a/Frontend/WorldInPocket/src/app/components/prenotazione-hotel/prenotazione-hotel.component.html
+++ b/Frontend/WorldInPocket/src/app/components/prenotazione-hotel/prenotazione-hotel.component.html
@@ -3,109 +3,162 @@
   <div class="form-group">
     <h2 class="heading">Booking & contact</h2>
     <div class="controls">
-      <input type="text" id="name" class="floatLabel" name="name" formControlName="name">
+      <input
+        type="text"
+        id="name"
+        class="floatLabel"
+        name="name"
+        formControlName="name"
+      />
       <label for="name">Name</label>
     </div>
     <div class="controls">
-      <input type="text" id="email" class="floatLabel" name="email" formControlName="email">
+      <input
+        type="text"
+        id="email"
+        class="floatLabel"
+        name="email"
+        formControlName="email"
+      />
       <label for="email">Email</label>
     </div>
     <div class="controls">
-      <input type="tel" id="phone" class="floatLabel" name="phone" formControlName="phone">
+      <input
+        type="tel"
+        id="phone"
+        class="floatLabel"
+        name="phone"
+        formControlName="phone"
+      />
       <label for="phone">Phone</label>
     </div>
-      <div class="grid">
-        <div class="col-2-3">
-          <div class="controls">
-           <input type="text" id="street" class="floatLabel" name="street" formControlName="street">
-           <label for="street">Street</label>
-          </div>
-        </div>
-        <div class="col-1-3">
-          <div class="controls">
-            <input type="number" id="streetNumber" class="floatLabel" name="streetNumber" formControlName="streetNumber">
-            <label for="street-number">Number</label>
-          </div>
-        </div>
-      </div>
-      <div class="grid">
-        <div class="col-2-3">
-          <div class="controls">
-            <input type="text" id="city" class="floatLabel" name="city" formControlName="city">
-            <label for="city">City</label>
-          </div>
-        </div>
-        <div class="col-1-3">
-          <div class="controls">
-            <input type="text" id="postCode" class="floatLabel" name="postCode" formControlName="postCode">
-            <label for="post-code">Post Code</label>
-          </div>
+    <div class="grid">
+      <div class="col-2-3">
+        <div class="controls">
+          <input
+            type="text"
+            id="street"
+            class="floatLabel"
+            name="street"
+            formControlName="street"
+          />
+          <label for="street">Street</label>
         </div>
       </div>
-      <div class="controls">
-        <input type="text" id="country" class="floatLabel" name="country" formControlName="country">
-        <label for="country">Country</label>
+      <div class="col-1-3">
+        <div class="controls">
+          <input
+            type="number"
+            id="streetNumber"
+            class="floatLabel"
+            name="streetNumber"
+            formControlName="streetNumber"
+          />
+          <label for="street-number">Number</label>
+        </div>
       </div>
+    </div>
+    <div class="grid">
+      <div class="col-2-3">
+        <div class="controls">
+          <input
+            type="text"
+            id="city"
+            class="floatLabel"
+            name="city"
+            formControlName="city"
+          />
+          <label for="city">City</label>
+        </div>
+      </div>
+      <div class="col-1-3">
+        <div class="controls">
+          <input
+            type="text"
+            id="postCode"
+            class="floatLabel"
+            name="postCode"
+            formControlName="postCode"
+          />
+          <label for="post-code">Post Code</label>
+        </div>
+      </div>
+    </div>
+    <div class="controls">
+      <input
+        type="text"
+        id="country"
+        class="floatLabel"
+        name="country"
+        formControlName="country"
+      />
+      <label for="country">Country</label>
+    </div>
   </div>
   <!--  Details -->
   <div class="form-group">
     <h2 class="heading">Details</h2>
     <div class="grid">
-    <div class="col-1-4 col-1-4-sm">
-      <div class="controls">
-        <input type="date" id="arrive" class="floatLabel" name="arrive" formControlName="arrive" value="<?php echo date('Y-m-d'); ?>">
-        <label for="arrive" class="label-date"><i class="fa fa-calendar"></i>&nbsp;&nbsp;Arrive</label>
-      </div>
-    </div>
-    <div class="col-1-4 col-1-4-sm">
-      <div class="controls">
-        <input type="date" id="depart" class="floatLabel" name="depart" formControlName="depart" value="<?php echo date('Y-m-d'); ?>" />
-        <label for="depart" class="label-date"><i class="fa fa-calendar"></i>&nbsp;&nbsp;Depart</label>
-      </div>
-    </div>
-      </div>
-      <div class="grid">
-    <div class="col-1-3 col-1-3-sm">
-      <div class="controls">
-        <i class="fa fa-sort"></i>
-        <input type="number" id="people" class="floatLabel" name="people" formControlName="people">
-      <label for="people"><i class="fa fa-male"></i>&nbsp;&nbsp;People</label>
-      </div>
-    </div>
-    <div class="col-1-3 col-1-3-sm">
-    <div class="controls">
-      <i class="fa fa-sort"></i>
-      <select class="floatLabel">
-        <option value="blank"></option>
-        <option value="deluxe" selected>With Bathroom</option>
-        <option value="Zuri-zimmer">Without Bathroom</option>
-      </select>
-      <label for="fruit">Room</label>
-     </div>
-    </div>
-
-    <div class="col-1-3 col-1-3-sm">
-    <div class="controls">
-      <i class="fa fa-sort"></i>
-      <select class="floatLabel">
-        <option value="blank"></option>
-        <option value="single-bed">letto singolo</option>
-        <option value="double-bed" selected>letto matrimoniale</option>
-      </select>
-      <label for="fruit">Bedding</label>
-     </div>
-    </div>
-
-     </div>
-      <div class="grid">
-        <p class="info-text">Se hai qualcosa da chiedere non esitare a scrivere..</p>
-        <br>
+      <div class="col-1-3 col-1-3-sm">
         <div class="controls">
-          <textarea name="comments" class="floatLabel" id="comments" formControlName="comments"></textarea>
-          <label for="comments">Comments</label>
-          </div>
-            <button type="submit" (click)="navigateToPaymentPage()" [disabled]="!isFormValid()" class="col-1-4">Invia e procedi con il pagamento</button>
+          <i class="fa fa-sort"></i>
+          <input
+            type="number"
+            id="people"
+            class="floatLabel"
+            name="people"
+            formControlName="people"
+          />
+          <label for="people"
+            ><i class="fa fa-male"></i>&nbsp;&nbsp;People</label
+          >
+        </div>
       </div>
+      <div class="col-1-3 col-1-3-sm">
+        <div class="controls">
+          <i class="fa fa-sort"></i>
+          <select class="floatLabel" formControlName="roomType">
+            <option value="blank"></option>
+            <option value="deluxe" selected>With Bathroom</option>
+            <option value="Zuri-zimmer">Without Bathroom</option>
+          </select>
+          <label for="fruit">Room</label>
+        </div>
+      </div>
+
+      <div class="col-1-3 col-1-3-sm">
+        <div class="controls">
+          <i class="fa fa-sort"></i>
+          <select class="floatLabel" formControlName="bedding">
+            <option value="blank"></option>
+            <option value="single-bed">letto singolo</option>
+            <option value="double-bed" selected>letto matrimoniale</option>
+          </select>
+          <label for="fruit">Bedding</label>
+        </div>
+      </div>
+    </div>
+    <div class="grid">
+      <p class="info-text">
+        Se hai qualcosa da chiedere non esitare a scrivere..
+      </p>
+      <br />
+      <div class="controls">
+        <textarea
+          name="comments"
+          class="floatLabel"
+          id="comments"
+          formControlName="comments"
+        ></textarea>
+        <label for="comments">Comments</label>
+      </div>
+      <button
+        type="submit"
+        [disabled]="!isFormValid()"
+        class="col-1-4"
+      >
+        Invia e procedi con il pagamento
+      </button>
+    </div>
   </div>
 </form>
-
